Added device as a parameter of the train func, notebook contains now the whole train routine.

--- a/notebooks/train_example.ipynb
+++ b/notebooks/train_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,14 +30,16 @@
    "source": [
     "seed = 42\n",
     "batch_size = 32\n",
+    "num_workers = 8\n",
     "\n",
-    "dataset = prepare_dataset(batch_size, root='../data/', validation_size=1000, random_state=seed)\n",
+    "dataset = prepare_dataset(batch_size, root='../data/', validation_size=1000, random_state=seed,\n",
+    "                          num_workers=num_workers)\n",
     "train, n_train, val, n_val, test, n_test = dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +72,7 @@
       "Instructions for updating:\n",
       "Use eager execution and: \n",
       "`tf.data.TFRecordDataset(path)`\n",
-      "Loaded dataset in 37 seconds\n"
+      "Loaded dataset in 33 seconds\n"
      ]
     }
    ],
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +116,7 @@
        "        [0, 0, 0, 0, 0, 0, 0]], dtype=int8))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,36 +143,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/gabi/anaconda3/envs/pyt/lib/python3.8/site-packages/torch/optim/lr_scheduler.py:129: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
-      "  warnings.warn(\"Detected call of `lr_scheduler.step()` before `optimizer.step()`. \"\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'DataLoader' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-4b8cf278fdd5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mnet_hash\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnet\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnet_dict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mnet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetrics\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpretrain_network_cifar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_tests\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mn_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m108\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0msave_trained_net\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnet_hash\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minfo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnet_args\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnum_labels\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/media/win_hdd/Gabi/Code/mff/ML/DP/code/info-nas/info_nas/datasets/networks/pretrained.py\u001b[0m in \u001b[0;36mpretrain_network_cifar\u001b[0;34m(net, train_loader, valid_loader, test_loader, num_tests, num_epochs)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m# TODO will be changed if more metrics needed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0macc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnum_epochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mtest_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_tests\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnum_tests\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/media/win_hdd/Gabi/Code/mff/ML/DP/code/NASBench-PyTorch/nasbench_pytorch/trainer.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(net, train_loader, loss, optimizer, scheduler, grad_clip, num_epochs, num_validation, validation_loader, device)\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0;31m# back-propagation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtargets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m             \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclip_grad_norm_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_clip\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'DataLoader' object is not callable"
+      "24/05/2021 21:35:21\n",
+      "--------------------\n",
+      "Epoch=0/10 Batch=1/1532 | Loss=2.277, Acc=0.219(7/32)\n",
+      "Epoch=0/10 Batch=101/1532 | Loss=2.266, Acc=0.182(588/3232)\n",
+      "Epoch=0/10 Batch=201/1532 | Loss=2.132, Acc=0.225(1447/6432)\n",
+      "Epoch=0/10 Batch=301/1532 | Loss=2.026, Acc=0.259(2491/9632)\n",
+      "Epoch=0/10 Batch=401/1532 | Loss=1.933, Acc=0.289(3708/12832)\n",
+      "Epoch=0/10 Batch=501/1532 | Loss=1.873, Acc=0.311(4978/16032)\n",
+      "Epoch=0/10 Batch=601/1532 | Loss=1.820, Acc=0.330(6355/19232)\n",
+      "Epoch=0/10 Batch=701/1532 | Loss=1.773, Acc=0.349(7835/22432)\n",
+      "Epoch=0/10 Batch=801/1532 | Loss=1.732, Acc=0.365(9363/25632)\n",
+      "Epoch=0/10 Batch=901/1532 | Loss=1.696, Acc=0.380(10955/28832)\n",
+      "Epoch=0/10 Batch=1001/1532 | Loss=1.660, Acc=0.393(12595/32032)\n",
+      "Epoch=0/10 Batch=1101/1532 | Loss=1.631, Acc=0.406(14297/35232)\n",
+      "Epoch=0/10 Batch=1201/1532 | Loss=1.599, Acc=0.418(16052/38432)\n",
+      "Epoch=0/10 Batch=1301/1532 | Loss=1.574, Acc=0.428(17808/41632)\n",
+      "Epoch=0/10 Batch=1401/1532 | Loss=1.549, Acc=0.437(19602/44832)\n"
      ]
     }
    ],
    "source": [
+    "import torch\n",
     "from info_nas.datasets.networks.utils import save_trained_net\n",
+    "from datetime import datetime\n",
+    "\n",
+    "torch.backends.cudnn.benchmark = True\n",
+    "device = torch.device('cuda')\n",
     "\n",
     "for net_hash, net in net_dict.items():\n",
-    "    net, metrics = pretrain_network_cifar(net, train, val, test, num_tests=n_test, num_epochs=108)\n",
+    "    now = datetime.now()\n",
+    "    print(now.strftime(\"%d/%m/%Y %H:%M:%S\\n--------------------\"))\n",
+    "    \n",
+    "    # train net and save it\n",
+    "    net = net.to(device)\n",
+    "    net, metrics = pretrain_network_cifar(net, train, val, test,\n",
+    "                                          num_tests=n_test, num_epochs=10, device=device)\n",
     "    \n",
     "    save_trained_net(net_hash, net, info=metrics, net_args=[num_labels])"
    ]
@@ -180,7 +197,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#jen 10 epochs for testing (108 trvá)\n",
+    "#TODO později jako v paperu (např. RMSProp)"
+   ]
   }
  ],
  "metadata": {
