Fixed errors in indexing of the nb dataset, notebook which runs the main function for io dataset construction.

--- a/notebooks/train_example.ipynb
+++ b/notebooks/train_example.ipynb
@@ -20,6 +20,105 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading dataset from file... This may take a few minutes...\n",
+      "WARNING:tensorflow:From /media/win_hdd/Gabi/Code/mff/ML/DP/nasbench/nasbench/api.py:146: tf_record_iterator (from tensorflow.python.lib.io.tf_record) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use eager execution and: \n",
+      "`tf.data.TFRecordDataset(path)`\n",
+      "Loaded dataset in 34 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nasbench import api\n",
+    "\n",
+    "nasbench_path = '../../../nasbench/nasbench_only108.tfrecord'\n",
+    "nb = api.NASBench(nasbench_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.git',\n",
+       " '.gitignore',\n",
+       " '.idea',\n",
+       " 'data',\n",
+       " 'info_nas',\n",
+       " 'info_nas.egg-info',\n",
+       " 'LICENSE',\n",
+       " 'notebooks',\n",
+       " 'README.md',\n",
+       " 'setup.py']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.listdir('..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading nasbench dataset (arch2vec) from ../data/nb_dataset.json\n",
+      "\n",
+      "--- Preparing CIFAR10 Data ---\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "--- CIFAR10 Data Prepared ---\n",
+      "\n",
+      "Split the dataset (percent labeled = 1e-05) - 4/381261 labeled networks chosen from the train set, 1/42363 labeled networks chosen from the validation set.\n",
+      "Processing labeled nets for the training set...\n",
+      "Loading labeled dataset from ../data/train_labeled.pt.\n",
+      "Processing labeled nets for the validation set...\n",
+      "Loading labeled dataset from ../data/valid_labeled.pt.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from info_nas.datasets.arch2vec_dataset import get_labeled_unlabeled_datasets\n",
+    "\n",
+    "torch.backends.cudnn.benchmark = True\n",
+    "device = torch.device('cuda')\n",
+    "\n",
+    "labeled, unlabeled = get_labeled_unlabeled_datasets(nb, percent_labeled=0.00001, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "--- Preparing CIFAR10 Data ---\n",
       "Files already downloaded and verified\n",
       "Files already downloaded and verified\n",
@@ -208,18 +307,6 @@
    "display_name": "pyt_conda",
    "language": "python",
    "name": "pyt_conda"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
