--- a/notebooks/design_net.ipynb
+++ b/notebooks/design_net.ipynb
@@ -81,6 +81,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test dataset shapes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -198,6 +205,155 @@
    ],
    "source": [
     "len(unlabeled['train'][1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test model shapes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from arch2vec.extensions.get_nasbench101_model import get_arch2vec_model\n",
+    "\n",
+    "model, opt = get_arch2vec_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from arch2vec.extensions.get_nasbench101_model import get_nasbench_datasets\n",
+    "\n",
+    "nb_dataset = get_nasbench_datasets('../data/nb_dataset.json', batch_size=None, seed=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model.train()\n",
+    "model.eval()\n",
+    "\n",
+    "batch_adj, batch_ops = nb_dataset['train'][1][:32], nb_dataset['train'][2][:32]\n",
+    "\n",
+    "mu, logvar = model._encoder(batch_ops, batch_adj)\n",
+    "z = model.reparameterize(mu, logvar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mu shape: torch.Size([32, 7, 16]), logvar shape: torch.Size([32, 7, 16]), z shape: torch.Size([32, 7, 16])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"mu shape: {mu.shape}, logvar shape: {logvar.shape}, z shape: {z.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 5])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "m = nn.Sequential(\n",
+    "    nn.Flatten(),\n",
+    "    nn.Linear(z.shape[1] * z.shape[2], 5),\n",
+    "    nn.ReLU()\n",
+    ")\n",
+    "m(z).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 8, 7, 16])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test unsqueeze and channels\n",
+    "\n",
+    "conv = nn.Conv2d(32, 8, 1, padding=0)\n",
+    "conv(mu.unsqueeze(0)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 7, 1])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 7, 17])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# repeat and concat\n",
+    "repeated = torch.Tensor([3]).repeat(mu.shape[0], mu.shape[1], 1)\n",
+    "print(repeated.shape)\n",
+    "\n",
+    "torch.cat([mu, repeated], axis=-1).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extended models"
    ]
   },
   {
