Small bugfixes (indexing stayed the same across dataset version), faster dataset loading (don't load cifar if not training/predicting anything), first version of the io model (shapes work properly).

--- a/notebooks/design_net.ipynb
+++ b/notebooks/design_net.ipynb
@@ -13,7 +13,27 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.git',\n",
+       " '.gitignore',\n",
+       " '.idea',\n",
+       " 'data',\n",
+       " 'info_nas',\n",
+       " 'info_nas.egg-info',\n",
+       " 'LICENSE',\n",
+       " 'notebooks',\n",
+       " 'README.md',\n",
+       " 'setup.py']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -41,7 +61,7 @@
    "source": [
     "from nasbench import api\n",
     "\n",
-    "nasbench_path = '../../../nasbench/nasbench_only108.tfrecord'\n",
+    "nasbench_path = '../data/nasbench_only108.tfrecord'\n",
     "nb = api.NASBench(nasbench_path)"
    ]
   },
@@ -55,12 +75,6 @@
      "output_type": "stream",
      "text": [
       "Loading nasbench dataset (arch2vec) from ../data/nb_dataset.json\n",
-      "\n",
-      "--- Preparing CIFAR10 Data ---\n",
-      "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n",
-      "--- CIFAR10 Data Prepared ---\n",
-      "\n",
       "Split the dataset (percent labeled = 1e-05) - 4/381261 labeled networks chosen from the train set, 1/42363 labeled networks chosen from the validation set.\n",
       "Processing labeled nets for the training set...\n",
       "Loading labeled dataset from ../data/train_labeled.pt.\n",
@@ -354,6 +368,119 @@
    "metadata": {},
    "source": [
     "## Extended models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from arch2vec.extensions.get_nasbench101_model import get_arch2vec_model\n",
+    "from arch2vec.extensions.get_nasbench101_model import get_nasbench_datasets\n",
+    "\n",
+    "model, opt = get_arch2vec_model(device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4000, 128, 32, 32])\n",
+      "torch.Size([4000, 512, 8, 8])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(labeled['train_io']['inputs'].shape)\n",
+    "print(labeled['train_io']['outputs'].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from info_nas.models.conv_embeddings import SimpleConvModel\n",
+    "\n",
+    "extended_model = SimpleConvModel(model, 128, 512).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_batch = labeled['train_io']['inputs'][:32]\n",
+    "out_batch = labeled['train_io']['outputs'][:32]\n",
+    "\n",
+    "batch_adj, batch_ops = labeled['train_net'][0][:32], labeled['train_net'][1][:32]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "ops_recon, adj_recon, mu, logvar, outputs = extended_model(batch_ops.to(device), batch_adj.to(device), in_batch.to(device))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 512, 8, 8])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_,_,_,_,z = model(batch_ops.to(device), batch_adj.to(device))\n",
+    "z = extended_model.process_z(z)\n",
+    "z = z.unsqueeze(-1).unsqueeze(-1).repeat(1, 1, in_batch.shape[2], in_batch.shape[3])\n",
+    "z.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cat([z, in_batch], dim=1).shape"
    ]
   },
   {
